# 100-Python-Projects

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Connections02_EmailAddresses.ipynb  Create_A_dictionary.ipynb  Dockerfile  LICENSE  Makefile  Python_Matrices.ipynb  README.md  mkdocs.yml  pyproject.toml  report.html  traces.jsonl  webinar-93927493663.ics  webinar-94822319223.ics  webinar-95673515625.ics  webinar-99594451482.ics
.github/workflows/: ci.yml
Tier-1-Agent-Foundations/01-Structured-Output-Parser/: README.md
Tier-1-Agent-Foundations/02-Tool-Registry-System/: README.md
Tier-1-Agent-Foundations/03-Function-Call-Retry-Engine/: README.md
Tier-1-Agent-Foundations/04-Tool-Permission-Sandbox/: DESIGN.md  README.md
Tier-1-Agent-Foundations/05-Streaming-Tool-Orchestrator/: README.md
Tier-1-Agent-Foundations/06-Prompt-Template-Manager/: README.md
Tier-1-Agent-Foundations/07-Few-Shot-Example-Selector/: README.md
Tier-1-Agent-Foundations/08-Chain-of-Thought-Generator/: README.md
Tier-1-Agent-Foundations/09-Prompt-AB-Testing-Framework/: README.md
Tier-1-Agent-Foundations/10-System-Message-Guardrails/: README.md
Tier-1-Agent-Foundations/11-Context-Window-Manager/: README.md
Tier-1-Agent-Foundations/12-Ephemeral-Conversation-Memory/: ETHICS.md  README.md
Tier-1-Agent-Foundations/13-Semantic-Memory/: README.md
Tier-1-Agent-Foundations/14-Recursive-Summary-Memory/: README.md
Tier-1-Agent-Foundations/15-Entity-Knowledge-Graph-Memory/: README.md
_data/: car-sales-missing-dropped.csv
_notebooks/: Notebooks.md
scripts/: validate_repo.py
(+191 files in other folders)
