[tool.poetry]
name = "100-ai-native-projects"
version = "0.1.0"
description = "A pattern library for AI-native system design"
authors = ["Natasha Newbold <natnew@example.com>"]
readme = "README.md"
packages = [{include = "shared"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.10.0"
anthropic = "^0.18.0"
pydantic = "^2.6.0"
tenacity = "^8.2.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
tiktoken = "^0.5.0"
colorama = "^0.4.6"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "Tier-1-Agent-Foundations/*/tests",
    "Tier-2-Multi-Agent-Architectures/*/tests",
    "Tier-3-Evaluation-Safety-Governance/*/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
